tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern3.sk
base class MyBase
class Foo() extends MyBase

fun foo(x: MyBase): void {
  x match {
  | Foo() -> void
  | Foo() -> void
  }
}

fun main(): void {
  print_string("OK")
}
